--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вадим Салеев</title>
     <link href="assets/output.css" rel="stylesheet"/>
     <link href="assets/reset.css" rel="stylesheet"/>
@@ -17,7 +18,7 @@
                 Вадим Салеев
             </h1>
             <p class="header-logo__des">
-                Праздник в ваш дом!
+                Ведущий мероприятий любого формата
             </p>
         </div>
     </header>
@@ -25,17 +26,17 @@
         <div class="portfolio">
             <div class="container">
                 <div class="portfolio__wrapper">
-                    <p class="portfolio__text">ПОРТФОЛИО</p>
+                    <p class="portfolio__text">ПРОМО</p>
                     <div class="slider">
                         <div class="slides">
                             <div class="slide">
-                                <video src="assets/videos/video1.MP4" muted></video>
+                                <video src="assets/videos/video7.mp4" muted controls loop></video>
                             </div>
                             <div class="slide">
-                                <video src="assets/videos/video2.mp4" muted></video>
+                                <video src="assets/videos/video2.mp4" muted controls loop></video>
                             </div>
                             <div class="slide">
-                                <video src="assets/videos/video3.mp4" muted></video>
+                                <video src="assets/videos/video3.mp4" muted controls loop></video>
                             </div>
                         </div>
                         <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -48,29 +49,33 @@
             <div class="video-cards__cards-column" data-index="1">
                 <div class=video-cards__card>
                     <div class="video-wrapper">
-                        <video src="assets/videos/video4.mp4" autoplay="autoplay" playsinline muted loop></video>
+                        <video src="assets/videos/video1.MP4" autoplay="autoplay" playsinline muted loop
+                               controls></video>
                     </div>
-                    <p class="desc">Заставим полюбить снова</p>
+                    <p class="desc">Gender Party</p>
                 </div>
                 <div class=video-cards__card>
                     <div class="video-wrapper">
-                        <video src="assets/videos/video5.mp4" autoplay="autoplay" playsinline muted loop></video>
+                        <video src="assets/videos/video5.mp4" autoplay="autoplay" playsinline muted loop
+                               controls></video>
                     </div>
-                    <p class="desc">Проведем настоящее интервью</p>
+                    <p class="desc">Reels для вас!</p>
                 </div>
             </div>
             <div class="video-cards__cards-column" data-index="2">
                 <div class=video-cards__card>
                     <div class="video-wrapper">
-                        <video src="assets/videos/video6.mp4" autoplay="autoplay" playsinline muted loop></video>
+                        <video src="assets/videos/video6.mp4" autoplay="autoplay" playsinline muted loop
+                               controls></video>
                     </div>
-                    <p class="desc">Подарим незабываемые эмоции</p>
+                    <p class="desc">Мем интервью</p>
                 </div>
                 <div class=video-cards__card>
                     <div class="video-wrapper">
-                        <video src="assets/videos/video7.mp4" autoplay="autoplay" playsinline muted loop></video>
+                        <video src="assets/videos/video8.mp4" autoplay="autoplay" playsinline muted loop
+                               controls></video>
                     </div>
-                    <p class="desc">Рассмешим даже самых угрюмых</p>
+                    <p class="desc">Party 18+</p>
                 </div>
             </div>
         </div>
@@ -80,35 +85,39 @@
                 <div class="costs-list__cost-cards-list">
                     <div class="costs-list__cost-card">
                         <div class="costs-list__cost-card__header">
-                            <p class="costs-list__cost-card__header-text">Пакет стандарт</p>
-                            <p class="costs-list__cost-card__header-cost">5000р</p>
+                            <p class="costs-list__cost-card__header-text">Пакет «На чиле»</p>
+                            <p class="costs-list__cost-card__header-cost">30.000 рублей</p>
                         </div>
                         <div class="costs-list__cost-card__desc">
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
+                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                            <p class="costs-list__cost-card__desc-item">2. 4 часа работы ведущего </p>
+                            <p class="costs-list__cost-card__desc-item">3. 4 часа работы Dj </p>
+                            <p class="costs-list__cost-card__desc-item">Аппарат (звук + свет)</p>
                         </div>
                     </div>
                     <div class="costs-list__cost-card">
                         <div class="costs-list__cost-card__header">
-                            <p class="costs-list__cost-card__header-text">Пакет стандарт</p>
-                            <p class="costs-list__cost-card__header-cost">5000р</p>
+                            <p class="costs-list__cost-card__header-text">Пакет «С кайфом»</p>
+                            <p class="costs-list__cost-card__header-cost">45.000 рублей</p>
                         </div>
                         <div class="costs-list__cost-card__desc">
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
+                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                            <p class="costs-list__cost-card__desc-item">2. 5 часов работы ведущего </p>
+                            <p class="costs-list__cost-card__desc-item">3. 6 часов работы DJ </p>
+                            <p class="costs-list__cost-card__desc-item">4. Аппарат (звук + свет + плазма) </p>
                         </div>
                     </div>
                     <div class="costs-list__cost-card">
                         <div class="costs-list__cost-card__header">
-                            <p class="costs-list__cost-card__header-text">Пакет стандарт</p>
-                            <p class="costs-list__cost-card__header-cost">5000р</p>
+                            <p class="costs-list__cost-card__header-text">Пакет «Лови момент» </p>
+                            <p class="costs-list__cost-card__header-cost">50.000 рублей</p>
                         </div>
                         <div class="costs-list__cost-card__desc">
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
-                            <p class="costs-list__cost-card__desc-item">1.Описани пакета по пунктам</p>
+                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                            <p class="costs-list__cost-card__desc-item">2. 30 минут интерактивов на Welcome zone</p>
+                            <p class="costs-list__cost-card__desc-item">3. 6 часов работы ведущего </p>
+                            <p class="costs-list__cost-card__desc-item">4. 6 часов работы Dj</p>
+                            <p class="costs-list__cost-card__desc-item">5. Аппарат (звук + свет + плазма)</p>
                         </div>
                     </div>
                 </div>
@@ -123,18 +132,50 @@
             <h2 class="feedbacks-list__header-text">ОТЗЫВЫ</h2>
             <div class="feedbacks-list__list">
                 <div class="feedback">
-                    <h3 class="feedback__text">Просто великолепно</h3>
+                    <p class="feedback__text">Дорогой Вадим!
+
+                        Хотим выразить вам огромную благодарность за вашу невероятную работу в организации нашей
+                        свадьбы. ✨Придумать программу за 4 дня до свадьбы это очень мощно.🔥
+                        Все было просто великолепно! Ваш профессионализм, внимание к деталям и терпеливость сделали нашу
+                        свадьбу незабываемой. Вы продемонстрировали невероятное мастерство и креативность. Наши гости
+                        восхищались всей атмосферой и деталями, которые вы подготовили. 😍Мы чувствовали себя так
+                        комфортно и уверенно, зная, что все в ваших заботливых руках. Это было нечто непередаваемое, и
+                        мы вам бесконечно благодарны за это.
+
+                        С наилучшими пожеланиями Даниил и Наталья.🤍</p>
                     <div class="feedback__user">
-                        <img class="feedback__user-avatar" alt="Аватар" src=""/>
-                        <p class="feedback__user-name">СВЕТЛАНА</p>
+                        <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar1.jpg"/>
+                        <p class="feedback__user-name">Даниил и Наталья.</p>
                     </div>
 
                 </div>
                 <div class="feedback">
-                    <h3 class="feedback__text">Просто великолепно</h3>
+                    <p class="feedback__text">Вадим, вы ведущий от бога! Вы очень великолепный, весёлый, задорный и самое главное, что подошли ко дню рождению дочки со всеми нашими пожеланиями. Все гости. Все восторге и именниница тоже!
+                        Девочкам тоже огромная благодарность
+                        Будем пользоваться вашими услугами и советовать вас знаком</p>
                     <div class="feedback__user">
-                        <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/IMAGE.png"/>
-                        <p class="feedback__user-name">АННА</p>
+                        <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar2.jpg"/>
+                        <p class="feedback__user-name">Алла.</p>
+                    </div>
+
+                </div>
+                <div class="feedback">
+                    <h3 class="feedback__text">Вадим был ведущим на нашей свадьбе. И нам и гостям все очень понравилось, современные веселые интерактивы, все четко, ненавязчиво, ответственный подход к работе. Вадим всегда был на связи, оперативно отвечал на наши вопросы и предлагал идеи.
+                        Спасибо большое за такой классный праздник!</h3>
+                    <div class="feedback__user">
+                        <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar3.jpg"/>
+                        <p class="feedback__user-name">Анна и Дмитрий</p>
+                    </div>
+
+                </div>
+                <div class="feedback">
+                    <h3 class="feedback__text">Самые тёплые, лучшие и восторженные отзывы
+                        Вадиму!!! Замечательный ведущий: всё очень задорно, при этом интеллигентно и достойно!
+                        Создаёт классную праздничную атмосферу! Были учтены всё пожелания. Помнит про все нюансы.
+                        Прикольные конкурсы, "неизбитые". Все очень довольны! Для меня это было важно. Однозначно рекомендую!!!</h3>
+                    <div class="feedback__user">
+                        <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar4.jpg"/>
+                        <p class="feedback__user-name">Наталья</p>
                     </div>
 
                 </div>
@@ -144,27 +185,53 @@
     <footer class="footer">
         <div class="footer__wrapper">
             <div class="footer__logo-container">
-                <p class="footer__logo-container__logo">Вадим Савельев</p>
+                <p class="footer__logo-container__logo">Вадим Салеев</p>
                 <p class="footer__logo-container__copyrights">© Sea-ls dev Fursenko Ivan</p>
             </div>
             <div class="footer__contacts">
+                <p class="footer__contacts__header">Контакты</p>
                 <div class="footer__contacts__socials">
-                    <i></i>
-                    <i></i>
+                    <a target="_blank" href="https://vk.com/kokos1725">
+                        <svg width="30" height="30" viewBox="0 0 101 100" fill="none"
+                             xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <g clip-path="url(#clip0_2_16)">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                      d="M7.52944 7.02944C0.5 14.0589 0.5 25.3726 0.5 48V52C0.5 74.6274 0.5 85.9411 7.52944 92.9706C14.5589 100 25.8726 100 48.5 100H52.5C75.1274 100 86.4411 100 93.4706 92.9706C100.5 85.9411 100.5 74.6274 100.5 52V48C100.5 25.3726 100.5 14.0589 93.4706 7.02944C86.4411 0 75.1274 0 52.5 0H48.5C25.8726 0 14.5589 0 7.52944 7.02944ZM17.3752 30.4169C17.9168 56.4169 30.9167 72.0418 53.7084 72.0418H55.0003V57.1668C63.3753 58.0001 69.7082 64.1252 72.2498 72.0418H84.0835C80.8335 60.2085 72.2914 53.6668 66.9581 51.1668C72.2914 48.0835 79.7915 40.5835 81.5831 30.4169H70.8328C68.4995 38.6669 61.5836 46.1668 55.0003 46.8751V30.4169H44.2499V59.2501C37.5833 57.5835 29.1668 49.5002 28.7918 30.4169H17.3752Z"
+                                      fill="black"/>
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_2_16">
+                                    <rect width="100" height="100" fill="white" transform="translate(0.5)"/>
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                    <a target="_blank"
+                       href="https://www.instagram.com/vadim_saleev_/profilecard/?igsh=MWlqYXR3eXJ6YWlubg==">
+                        <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                  d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                                  fill="#0F0F0F"/>
+                            <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z"
+                                  fill="#0F0F0F"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                  d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z"
+                                  fill="#0F0F0F"/>
+                        </svg>
+                    </a>
                     <i></i>
                     <i></i>
                 </div>
-                <p class="footer__contacts__header">Контакты</p>
-                <p class="footer__contacts__contact">Email: qwerty@mail.ru</p>
-                <p class="footer__contacts__contact">Телефон: 8-888-888-88-88</p>
             </div>
         </div>
     </footer>
-    <a href="https://t.me/Vadim_saleev" class="telegram-button" target="_blank">Написать нам</a>
+    <a href="https://t.me/Vadim_saleev" class="telegram-button" target="_blank">Написать мне</a>
 </div>
 <script src="slider/slider.js" defer></script>
 <script>
-    window.onscroll = function() {
+    window.onscroll = function () {
         const button = document.querySelector('.telegram-button');
         if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
             button.style.display = "block"; // Показываем кнопку
