--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header class="header">
         <div class="header-img"></div>
         <div class="header-logo">
-            <h1 class="header-logo__logo">
+            <h1 class="header-logo__logo fade-in">
                 Вадим Салеев
             </h1>
-            <p class="header-logo__des">
+            <p class="header-logo__des fade-in">
                 Ведущий мероприятий любого формата
             </p>
         </div>
@@ -26,7 +26,7 @@
         <div class="portfolio">
             <div class="container">
                 <div class="portfolio__wrapper">
-                    <p class="portfolio__text">ПРОМО</p>
+                    <p class="portfolio__text fade-in">ПРОМО</p>
                     <div class="slider">
                         <div class="slides">
                             <div class="slide">
@@ -47,14 +47,14 @@
         </div>
         <div class="video-cards">
             <div class="video-cards__cards-column" data-index="1">
-                <div class=video-cards__card>
+                <div class="video-cards__card slide-in-left">
                     <div class="video-wrapper">
                         <video src="assets/videos/video1.MP4" autoplay="autoplay" playsinline muted loop
                                controls></video>
                     </div>
                     <p class="desc">Gender Party</p>
                 </div>
-                <div class=video-cards__card>
+                <div class="video-cards__card slide-in-left">
                     <div class="video-wrapper">
                         <video src="assets/videos/video5.mp4" autoplay="autoplay" playsinline muted loop
                                controls></video>
@@ -63,14 +63,14 @@
                 </div>
             </div>
             <div class="video-cards__cards-column" data-index="2">
-                <div class=video-cards__card>
+                <div class="video-cards__card slide-in-right">
                     <div class="video-wrapper">
                         <video src="assets/videos/video6.mp4" autoplay="autoplay" playsinline muted loop
                                controls></video>
                     </div>
                     <p class="desc">Мем интервью</p>
                 </div>
-                <div class=video-cards__card>
+                <div class="video-cards__card slide-in-right">
                     <div class="video-wrapper">
                         <video src="assets/videos/video8.mp4" autoplay="autoplay" playsinline muted loop
                                controls></video>
@@ -84,35 +84,35 @@
                 <h2 class="costs-list__header">ЦЕНЫ</h2>
                 <div class="costs-list__cost-cards-list">
                     <div class="costs-list__cost-card">
-                        <div class="costs-list__cost-card__header">
+                        <div class="costs-list__cost-card__header slide-in-left">
                             <p class="costs-list__cost-card__header-text">Пакет «На чиле»</p>
                             <p class="costs-list__cost-card__header-cost">30.000 рублей</p>
                         </div>
-                        <div class="costs-list__cost-card__desc">
+                        <div class="costs-list__cost-card__desc fade-in">
                             <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
                             <p class="costs-list__cost-card__desc-item">2. 4 часа работы ведущего </p>
                             <p class="costs-list__cost-card__desc-item">3. 4 часа работы Dj </p>
                             <p class="costs-list__cost-card__desc-item">Аппарат (звук + свет)</p>
                         </div>
                     </div>
-                    <div class="costs-list__cost-card">
-                        <div class="costs-list__cost-card__header">
+                    <div class="costs-list__cost-card ">
+                        <div class="costs-list__cost-card__header slide-in-left">
                             <p class="costs-list__cost-card__header-text">Пакет «С кайфом»</p>
                             <p class="costs-list__cost-card__header-cost">45.000 рублей</p>
                         </div>
-                        <div class="costs-list__cost-card__desc">
+                        <div class="costs-list__cost-card__desc fade-in">
                             <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
                             <p class="costs-list__cost-card__desc-item">2. 5 часов работы ведущего </p>
                             <p class="costs-list__cost-card__desc-item">3. 6 часов работы DJ </p>
                             <p class="costs-list__cost-card__desc-item">4. Аппарат (звук + свет + плазма) </p>
                         </div>
                     </div>
-                    <div class="costs-list__cost-card">
-                        <div class="costs-list__cost-card__header">
+                    <div class="costs-list__cost-card ">
+                        <div class="costs-list__cost-card__header slide-in-left">
                             <p class="costs-list__cost-card__header-text">Пакет «Лови момент» </p>
                             <p class="costs-list__cost-card__header-cost">50.000 рублей</p>
                         </div>
-                        <div class="costs-list__cost-card__desc">
+                        <div class="costs-list__cost-card__desc fade-in">
                             <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
                             <p class="costs-list__cost-card__desc-item">2. 30 минут интерактивов на Welcome zone</p>
                             <p class="costs-list__cost-card__desc-item">3. 6 часов работы ведущего </p>
@@ -131,7 +131,7 @@
         <div class="feedbacks-list">
             <h2 class="feedbacks-list__header-text">ОТЗЫВЫ</h2>
             <div class="feedbacks-list__list">
-                <div class="feedback">
+                <div class="feedback fade-in">
                     <p class="feedback__text">Дорогой Вадим!
 
                         Хотим выразить вам огромную благодарность за вашу невероятную работу в организации нашей
@@ -149,7 +149,7 @@
                     </div>
 
                 </div>
-                <div class="feedback">
+                <div class="feedback fade-in">
                     <p class="feedback__text">Вадим, вы ведущий от бога! Вы очень великолепный, весёлый, задорный и самое главное, что подошли ко дню рождению дочки со всеми нашими пожеланиями. Все гости. Все восторге и именниница тоже!
                         Девочкам тоже огромная благодарность
                         Будем пользоваться вашими услугами и советовать вас знаком</p>
@@ -159,7 +159,7 @@
                     </div>
 
                 </div>
-                <div class="feedback">
+                <div class="feedback fade-in">
                     <h3 class="feedback__text">Вадим был ведущим на нашей свадьбе. И нам и гостям все очень понравилось, современные веселые интерактивы, все четко, ненавязчиво, ответственный подход к работе. Вадим всегда был на связи, оперативно отвечал на наши вопросы и предлагал идеи.
                         Спасибо большое за такой классный праздник!</h3>
                     <div class="feedback__user">
@@ -168,7 +168,7 @@
                     </div>
 
                 </div>
-                <div class="feedback">
+                <div class="feedback fade-in">
                     <h3 class="feedback__text">Самые тёплые, лучшие и восторженные отзывы
                         Вадиму!!! Замечательный ведущий: всё очень задорно, при этом интеллигентно и достойно!
                         Создаёт классную праздничную атмосферу! Были учтены всё пожелания. Помнит про все нюансы.
@@ -227,7 +227,7 @@
             </div>
         </div>
     </footer>
-    <a href="https://t.me/Vadim_saleev" class="telegram-button" target="_blank">Написать мне</a>
+    <a href="https://t.me/Vadim_saleev" class="telegram-button slide-in-right" target="_blank">Написать мне</a>
 </div>
 <script src="slider/slider.js" defer></script>
 <script>
@@ -239,6 +239,28 @@
             button.style.display = "none"; // Скрываем кнопку
         }
     };
+    document.addEventListener("DOMContentLoaded", function () {
+        const elements = document.querySelectorAll('.fade-in, .slide-in-right, .slide-in-left');
+
+        const options = {
+            root: null,
+            rootMargin: '0px',
+            threshold: 0.1,
+        };
+
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, options);
+
+        elements.forEach(element => {
+            observer.observe(element);
+        });
+    });
 </script>
 </body>
 </html>
