--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <div class="slider">
                         <div class="slides">
                             <div class="slide">
+                                <video src="assets/videos/video4.MP4" muted controls loop autoplay></video>
+                            </div>
+                            <div class="slide">
                                 <video src="assets/videos/video7.mp4" muted controls loop></video>
                             </div>
                             <div class="slide">
@@ -124,7 +127,7 @@
             </div>
             <div class="costs-video">
 
-                <video src="assets/videos/video4.mp4" autoplay="autoplay" playsinline muted loop></video>
+                <video src="assets/videos/video4.MP4" autoplay="autoplay" playsinline muted loop></video>
             </div>
         </div>
 
