--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="slider">
                         <div class="slides">
                             <div class="slide">
-                                <video src="assets/videos/video4.MP4" muted controls loop autoplay></video>
+                                <video src="assets/videos/video9.mp4" controls playsinline autoplay muted></video>
                             </div>
                             <div class="slide">
                                 <video src="assets/videos/video7.mp4" muted controls loop></video>
