--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header class="header">
         <div class="header-img"></div>
         <div class="header-logo">
-            <h1 class="header-logo__logo fade-in">
-                Вадим Салеев
-            </h1>
+            <div class="header-logo__wrapper">
+                <span class="header-logo__logo" data-text="Вадим"></span>
+                <span class="header-logo__logo" data-text="Салеев"></span>
+            </div>
             <p class="header-logo__des fade-in">
                 Ведущий мероприятий любого формата
             </p>
