--- a/index.html
+++ b/index.html
@@ -83,54 +83,50 @@
                 </div>
             </div>
         </div>
-        <div class="costs">
-            <div class="costs-list">
-                <h2 class="costs-list__header">ЦЕНЫ</h2>
-                <div class="costs-list__cost-cards-list">
-                    <div class="costs-list__cost-card">
-                        <div class="costs-list__cost-card__header slide-in-left">
-                            <p class="costs-list__cost-card__header-text">Пакет «На чиле»</p>
-                            <p class="costs-list__cost-card__header-cost">30.000 рублей</p>
-                        </div>
-                        <div class="costs-list__cost-card__desc fade-in">
-                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
-                            <p class="costs-list__cost-card__desc-item">2. 4 часа работы ведущего </p>
-                            <p class="costs-list__cost-card__desc-item">3. 4 часа работы Dj </p>
-                            <p class="costs-list__cost-card__desc-item">Аппарат (звук + свет)</p>
-                        </div>
+        <div class="costs-list">
+            <video src="assets/videos/video4.MP4" autoplay="autoplay" playsinline muted loop></video>
+            <h2 class="costs-list__header">ЦЕНЫ</h2>
+            <div class="costs-list__cost-cards-list">
+                <div class="costs-list__cost-card">
+                    <div class="costs-list__cost-card__header slide-in-left">
+                        <p class="costs-list__cost-card__header-text">Пакет «На чиле»</p>
+                        <p class="costs-list__cost-card__header-cost">30.000 рублей</p>
                     </div>
-                    <div class="costs-list__cost-card ">
-                        <div class="costs-list__cost-card__header slide-in-left">
-                            <p class="costs-list__cost-card__header-text">Пакет «С кайфом»</p>
-                            <p class="costs-list__cost-card__header-cost">45.000 рублей</p>
-                        </div>
-                        <div class="costs-list__cost-card__desc fade-in">
-                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
-                            <p class="costs-list__cost-card__desc-item">2. 5 часов работы ведущего </p>
-                            <p class="costs-list__cost-card__desc-item">3. 6 часов работы DJ </p>
-                            <p class="costs-list__cost-card__desc-item">4. Аппарат (звук + свет + плазма) </p>
-                        </div>
+                    <div class="costs-list__cost-card__desc fade-in">
+                        <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                        <p class="costs-list__cost-card__desc-item">2. 4 часа работы ведущего </p>
+                        <p class="costs-list__cost-card__desc-item">3. 4 часа работы Dj </p>
+                        <p class="costs-list__cost-card__desc-item">4. Аппарат (звук + свет)</p>
                     </div>
-                    <div class="costs-list__cost-card ">
-                        <div class="costs-list__cost-card__header slide-in-left">
-                            <p class="costs-list__cost-card__header-text">Пакет «Лови момент» </p>
-                            <p class="costs-list__cost-card__header-cost">50.000 рублей</p>
-                        </div>
-                        <div class="costs-list__cost-card__desc fade-in">
-                            <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
-                            <p class="costs-list__cost-card__desc-item">2. 30 минут интерактивов на Welcome zone</p>
-                            <p class="costs-list__cost-card__desc-item">3. 6 часов работы ведущего </p>
-                            <p class="costs-list__cost-card__desc-item">4. 6 часов работы Dj</p>
-                            <p class="costs-list__cost-card__desc-item">5. Аппарат (звук + свет + плазма)</p>
-                        </div>
+                </div>
+                <div class="costs-list__cost-card ">
+                    <div class="costs-list__cost-card__header slide-in-left">
+                        <p class="costs-list__cost-card__header-text">Пакет «С кайфом»</p>
+                        <p class="costs-list__cost-card__header-cost">45.000 рублей</p>
+                    </div>
+                    <div class="costs-list__cost-card__desc fade-in">
+                        <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                        <p class="costs-list__cost-card__desc-item">2. 5 часов работы ведущего </p>
+                        <p class="costs-list__cost-card__desc-item">3. 6 часов работы DJ </p>
+                        <p class="costs-list__cost-card__desc-item">4. Аппарат (звук + свет + плазма) </p>
+                    </div>
+                </div>
+                <div class="costs-list__cost-card ">
+                    <div class="costs-list__cost-card__header slide-in-left">
+                        <p class="costs-list__cost-card__header-text">Пакет «Лови момент» </p>
+                        <p class="costs-list__cost-card__header-cost">50.000 рублей</p>
+                    </div>
+                    <div class="costs-list__cost-card__desc fade-in">
+                        <p class="costs-list__cost-card__desc-item">1. Уникальный план мероприятия </p>
+                        <p class="costs-list__cost-card__desc-item">2. 30 минут интерактивов на Welcome zone</p>
+                        <p class="costs-list__cost-card__desc-item">3. 6 часов работы ведущего </p>
+                        <p class="costs-list__cost-card__desc-item">4. 6 часов работы Dj</p>
+                        <p class="costs-list__cost-card__desc-item">5. Аппарат (звук + свет + плазма)</p>
                     </div>
                 </div>
             </div>
-            <div class="costs-video">
-
-                <video src="assets/videos/video4.MP4" autoplay="autoplay" playsinline muted loop></video>
-            </div>
         </div>
+
 
         <div class="feedbacks-list">
             <h2 class="feedbacks-list__header-text">ОТЗЫВЫ</h2>
@@ -154,7 +150,9 @@
 
                 </div>
                 <div class="feedback fade-in">
-                    <p class="feedback__text">Вадим, вы ведущий от бога! Вы очень великолепный, весёлый, задорный и самое главное, что подошли ко дню рождению дочки со всеми нашими пожеланиями. Все гости. Все восторге и именниница тоже!
+                    <p class="feedback__text">Вадим, вы ведущий от бога! Вы очень великолепный, весёлый, задорный и
+                        самое главное, что подошли ко дню рождению дочки со всеми нашими пожеланиями. Все гости. Все
+                        восторге и именниница тоже!
                         Девочкам тоже огромная благодарность
                         Будем пользоваться вашими услугами и советовать вас знаком</p>
                     <div class="feedback__user">
@@ -164,7 +162,9 @@
 
                 </div>
                 <div class="feedback fade-in">
-                    <h3 class="feedback__text">Вадим был ведущим на нашей свадьбе. И нам и гостям все очень понравилось, современные веселые интерактивы, все четко, ненавязчиво, ответственный подход к работе. Вадим всегда был на связи, оперативно отвечал на наши вопросы и предлагал идеи.
+                    <h3 class="feedback__text">Вадим был ведущим на нашей свадьбе. И нам и гостям все очень понравилось,
+                        современные веселые интерактивы, все четко, ненавязчиво, ответственный подход к работе. Вадим
+                        всегда был на связи, оперативно отвечал на наши вопросы и предлагал идеи.
                         Спасибо большое за такой классный праздник!</h3>
                     <div class="feedback__user">
                         <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar3.jpg"/>
@@ -176,7 +176,8 @@
                     <h3 class="feedback__text">Самые тёплые, лучшие и восторженные отзывы
                         Вадиму!!! Замечательный ведущий: всё очень задорно, при этом интеллигентно и достойно!
                         Создаёт классную праздничную атмосферу! Были учтены всё пожелания. Помнит про все нюансы.
-                        Прикольные конкурсы, "неизбитые". Все очень довольны! Для меня это было важно. Однозначно рекомендую!!!</h3>
+                        Прикольные конкурсы, "неизбитые". Все очень довольны! Для меня это было важно. Однозначно
+                        рекомендую!!!</h3>
                     <div class="feedback__user">
                         <img class="feedback__user-avatar" alt="Аватар" src="assets/imgs/avatar4.jpg"/>
                         <p class="feedback__user-name">Наталья</p>
